@@ -1,18 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX 50notmuch-gentoo.el 291 RMD160 7e036b8700f50cde6c3b27622193ddf08812229b SHA1 cc087fe76f750e84171a6ddef9dc10139b8450cc SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b
-EBUILD notmuch-9999.ebuild 3612 RMD160 5b5c72d435a59ca6fd0540fa60d14db640880697 SHA1 c00920b8f6e699bbd84c38ad178d5daeef07460e SHA256 112c6b088ce757fd1d25de8758bb6e9513696026512de1bf9175e3681f9283d7
-MISC ChangeLog 1989 RMD160 fcd34a796ab516fa32ac87d0470618ce8c795535 SHA1 046ea60189f71bef4d1b9ab7480ea8db5d58dcd9 SHA256 21a6f7810394a6e96775ad1f7c2849ee893c5b38d6057d16d8eec4d9c61b1784
-MISC metadata.xml 1041 RMD160 ac875cf25ade53b64452c1720b5ea9c1164ec153 SHA1 e365d3d5c6db5eb831fe8b334c4418a0b380054f SHA256 d8a3f9a046b198fe004bf49155441385b9aafd8d10bf523cbe70b037d849fd85
+AUX 50notmuch-gentoo.el 291 SHA256 68c0ecfd3d10246fb65ec48b097c1b477ce33f44014f602f903c16b752ba7d3b SHA512 80612ba5ae90f2fbb24b38bae99b660c5e3d58e7390a4bb3a0e5e9b49092e38f189347344286072617935abf7ea08b538f68e8227705ca0b2b44985c4c0d024b WHIRLPOOL c149cfb298cb51bef064c433481444dbd21a20903ee8560ae758a4b4fc0dd983db789b2d1343dc8b30e5e4a0443ee636e5742ba471fe981eb2262ad03567fd22
+EBUILD notmuch-9999.ebuild 3664 SHA256 cb591efa6b32d383f0a3a4d2a893e123107b592d5accb1f4384d0b7b7427f785 SHA512 befa2a4e62513b36bffb49b4be79cd488df8f52de7149e192ca0b0fab11f40e7fe6bee0fe835dd040270c52ab03a0f6bf1e9aa2c2c7e37128332fed9a46f97f4 WHIRLPOOL 274e31087febfd8d70335715417b2918fc90eb5afed249f026f59440dadf3ff82e9c56f60ae0322899df698ffd304de3f93c340b6660584130371372953fdf04
+MISC ChangeLog 2116 SHA256 77c338d8090395921ba5407fca39b1abf6c18301382bec98f22d931408a915b6 SHA512 eaf7ee3e5e537ca99c14006783b4c31ebdb06915b1310b937c06b767f9b713766d8aa0aab7de76e118c73e88104cb36d73788087527bbada882b5ff48fd79348 WHIRLPOOL 25805befe63719262624a0344d9abe87e6cedb091d5258ab090da493478063ba488315a73fad1404c387ffcac6b776ec6d2e579eebdcfe384053ad967fb29349
+MISC metadata.xml 1041 SHA256 d8a3f9a046b198fe004bf49155441385b9aafd8d10bf523cbe70b037d849fd85 SHA512 9471531172e3dd6e2bab2d47f83e546e97ccb71bfe84bed177ab894c4f902e7e61a58cc6ceecc68b31379f922ab033d8e2e9dd5ba00845e9336c5d840e93b637 WHIRLPOOL 088ea5cfbfc05643406fc4f52579c9d71b161aa09e71a6a1c43dae956084d0ae7118db6a18b086ee4c823ef08be506c113a2d1097217d6ddbca73aaa69dad883
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBAgAGBQJPt1KyAAoJEPATRTHh2/q1Fj0IAJdhH9AsXxDWJDiT8Erqo6Pf
-4LJYcU1dpHaFT7TFavedl+lNg7u7phvyZWbVStFyCY9SlPY4p3xISZPeUJmDMrOy
-ZHTjk0gLUIdJGdRJHxXMrMQN/U9AJPtrur6EBpsf8ra2MLrDpPx5J5MGRv2LLEJA
-3gS2eyUn34dMYVFffoe+DQcUcT5KueZMdouVlYzi29EEeXlu8xgt8gETNqSaqSdG
-E7GnVJdrTBV/4ph+d9ntN+dz4SSc1MlgHpzSSC8U6uSCKoRMwEx09uDSVYngebKE
-BOCLKl4+sHPxkqae8vPaIsKLC/9RTwcC6FU12TvD4mJAO4/k5x8xe2LrgTxOboY=
-=/GEu
+iQEcBAEBCAAGBQJQ+T+7AAoJEPATRTHh2/q1JNIH/jjtA0l9hegkMmALn7an5/sr
+QlMTdF//ai33sh589lq/n3/8IrE2aYAdsQDWRvne9l9oXI366OAcSjED6ZOAslGN
+GXw/ooi24a2N0p233uYqHYF743O+hd+2QE8Kgxnhe25rNaUZMJg2CwCDEUxm3a2w
+VOLZkrsFvW+shCgSlmJt0tCH5Q31AhwGaUS0KXU9yX+ppAL6D8sqDy/hTOTaV/AX
+qZBnsyoVbvgg62MhAGD06/A7UcpmhtEocAIhlKn9d8O+T4IKSO1IIpJPycxddsvW
+Y+XgyZamAu1xmeFKd+xeYKnETR+pGInNCILBT/swjTS7l2I8BBUzRCHf+xc4kzw=
+=IhTy
 -----END PGP SIGNATURE-----
